fix: hide the scrollbars

--- a/app/globals.css
+++ b/app/globals.css
@@ -127,4 +127,14 @@
   html {
     @apply font-sans;
   }
+   /* Hide scrollbar for Chrome, Safari and Opera */
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  * {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
